Commit Version 0.6.9 gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ body {
     justify-content: left;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 2%;
+    gap: .5vmin;
 }
 
 .psocial {
